--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "rxjs": "~6.2.0",
@@ -48,7 +49,7 @@
     "typescript": "~2.9.2"
   },
   "engines": {
-    "node" : "~10.15.3",
-    "npm" : "~6.4.1"
+    "node": "~10.15.3",
+    "npm": "~6.4.1"
   }
 }
